--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "lucide-react": "^0.417.0",
     "next": "15.4.2",
     "react": "^18.3.1",
+    "react-color": "^2.19.3",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
@@ -59,6 +60,7 @@
     "@types/crypto-js": "^4.2.2",
     "@types/node": "^20.14.12",
     "@types/react": "^18.3.3",
+    "@types/react-color": "^3.0.12",
     "@types/react-dom": "^18.3.0",
     "genkit-cli": "^1.14.1",
     "postcss": "^8.4.39",
