--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "genkit": "^1.14.1",
     "lucide-react": "^0.417.0",
     "next": "15.4.2",
+    "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-color": "^2.19.3",
     "react-day-picker": "^8.10.1",
